# tqdm_pandas

./: .gitignore  README.md  example.ipynb  pyproject.toml
.github/: publish.yml
.github/workflows/: ci.yml  publish.yml  python_ci.yml  release.yml  semantic_release.yml
tqdm_pandas/: __init__.py  patcher.py  reader.py
